OO-3408: better next / previous implementation on table with paged data source